# ADA502-FireGuard

./: README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
API/: DataHelper.py  Dockerfile  README.md  domain.py  main.py  mqtt_client.py  persistence.py  pyproject.toml  requirements.txt
API/kc/: auth.py
Database/: setup-ddl.sql
FlashoverComputation/: CalculateTimeToFlashover.py
