[tool.poetry]
name = "fireguard-api"
version = "0.1.0"
description = ""
authors = ["Patrick Stünkel <webminz@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
minio = "^7.2.15"
pydantic = "^2.11.2"
psycopg2 = "^2.9.10"
dotenv = "^0.9.9"
dynamic-frcm = "^1.0.1"
python-keycloak = "^5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
